# hecate-os

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.build  INSTALL.md  README.md  SECURITY.md  build.sh  docker-compose.yml  docker-entrypoint.sh  install-hecateos.sh  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-iso.yml  rust-ci.yml
config/: lb_config.sh
config/hooks/live/: 7000-remove-bloat.hook.chroot  8000-install-hecate-cli.hook.chroot  9000-enable-services.hook.chroot  9001-configure-system.hook.chroot  9999-cleanup.hook.chroot
config/includes.chroot/boot/grub/themes/hecate/: theme.txt
config/includes.chroot/etc/: lsb-release  os-release
config/includes.chroot/etc/default/: grub  zramswap
config/includes.chroot/etc/docker/: daemon.json
config/includes.chroot/etc/sysctl.d/: 99-hecate-performance.conf
config/includes.chroot/etc/systemd/system/: hecate-nvidia-irq-affinity.service  nvidia-persistenced.service
config/includes.chroot/etc/systemd/system-preset/: 99-hecate.preset
config/includes.chroot/etc/tuned/: active_profile
config/includes.chroot/etc/update-motd.d/: 00-header
config/includes.chroot/usr/local/share/hecate/: hecate-info
config/includes.chroot/usr/share/hecate/migrations/: 1737500000_initial_setup.sh
config/includes.chroot/usr/share/hecate/scripts/: hecate-driver-installer.sh  hecate-iso-sign.sh  hecate-release.sh
config/includes.installer/: autoinstall.yaml
config/package-lists/: ai-ml.list.chroot  development.list.chroot  nvidia.list.chroot  performance.list.chroot  remove.list.chroot  system.list.chroot
docs/: ARCHITECTURE.md  BUILDING.md  COMPARISON.md  DEVELOPMENT-TOOLS.md  HARDWARE.md  ROADMAP.md
editions/: README.md  build-edition.sh
hecate-dashboard/: README.md  biome.json  package-lock.json  package.json
hecate-dashboard/.husky/: pre-commit
hecate-dashboard/app/: page.tsx
hecate-dashboard/components/: system-dashboard.tsx
hecate-dashboard/components/metrics/: cpu-metrics.tsx  disk-metrics.tsx  gpu-metrics.tsx  memory-metrics.tsx  network-metrics.tsx  process-list.tsx
migrations/: README.md
rust/: BUILD.md  Cargo.toml  Dockerfile.test  Makefile  Makefile.dev  TESTING.md  create-test-iso.sh  docker-compose.test.yml  hecate-daemon.service  hecate-iso-config.toml  test-complete.sh  test-e2e.sh  test-iso-creation.sh  test-tools.sh  validate.sh
rust/hecate-arch/: Cargo.toml
rust/hecate-arch/src/: main.rs
rust/hecate-bench/: Cargo.toml
rust/hecate-bench/src/: main.rs
rust/hecate-changelog/src/: main.rs
rust/hecate-cli/src/: main.rs
rust/hecate-core/: Cargo.toml
rust/hecate-core/benches/: performance.rs
rust/hecate-core/src/: lib.rs  tests.rs
rust/hecate-daemon/: Cargo.toml
rust/hecate-daemon/src/: main.rs
rust/hecate-dev/: Cargo.toml
rust/hecate-dev/src/: build.rs  check.rs  iso.rs  main.rs  release.rs  setup.rs  utils.rs
rust/hecate-iso-builder/: Cargo.toml  README.md
rust/hecate-iso-builder/src/: config.rs  downloader.rs  injector.rs  iso.rs  iso_extractor.rs  iso_native.rs  main.rs
rust/hecate-iso-builder/src/scripts/: first_boot.sh  post_install.sh
rust/hecate-lint/: Cargo.toml
rust/hecate-lint/src/: main.rs
rust/hecate-monitor/src/: main.rs
rust/hecate-pkg/: Cargo.toml
rust/hecate-pkg/migrations/: 001_initial.sql
rust/hecate-pkg/src/: cache.rs  database.rs  lib.rs  main.rs
rust/hecate-pkg/tests/: integration.rs
rust/hecate-sign/: Cargo.toml
rust/hecate-sign/src/: lib.rs  main.rs
rust/hecate-update/: Cargo.toml
rust/hecate-update/src/: driver.rs  kernel.rs  lib.rs  main.rs  rollback.rs  scheduler.rs  snapshot.rs
rust/hecate-update/tests/: integration.rs
rust/installer/: install.sh  uninstall.sh
scripts/: apply-optimizations.sh  hardware-detector.sh  hecate-benchmark.sh  hecate-driver-installer.sh  hecate-iso-upload.sh  hecate-welcome.py  setup-repositories.sh  web-installer.sh
