[package]
name = "hecate-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
hecate-core = { path = "../hecate-core" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
nix = { version = "0.27", features = ["fs", "process", "signal"] }

[[bin]]
name = "hecated"
path = "src/main.rs"