[package]
name = "hecate-iso-builder"
version = "0.1.0"
edition = "2021"
authors = ["HecateOS Team"]
license = "MIT"
description = "HecateOS ISO customization tool"

[[bin]]
name = "hecate-iso"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"

# Async runtime
tokio = { version = "1.35", features = ["full", "process"] }
futures-util = "0.3"

# File operations
tempfile = "3.8"
walkdir = "2.4"
tar = "0.4"
flate2 = "1.0"
dirs = "5.0"
which = "6.0"
byteorder = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/time
chrono = "0.4"

# HTTP
reqwest = { version = "0.11", features = ["stream"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }