[package]
name = "hecate-pkg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hecate-pkg"
path = "src/main.rs"

[dependencies]
# Core dependencies
hecate-core = { path = "../hecate-core" }

# CLI and UI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP client for downloading
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
hyper = { version = "1.1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Database for package registry
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# Compression and archives
tar = "0.4"
flate2 = "1.0"
zstd = "0.13"
xz2 = "0.1"

# Cryptography and verification
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.1"
hex = "0.4"

# File system operations
walkdir = "2.4"
tempfile = "3.8"
fs_extra = "1.3"

# Versioning
semver = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

[dev-dependencies]
mockall = "0.12"
proptest = "1.4"
criterion = "0.5"