[package]
name = "hecate-update"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Intelligent update system for HecateOS with live patching and rollback support"

[[bin]]
name = "hecate-update"
path = "src/main.rs"

[dependencies]
# Core dependencies
hecate-core = { path = "../hecate-core" }
hecate-pkg = { path = "../hecate-pkg" }

# CLI and UI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client for downloading
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# System interaction
sysinfo = "0.31"
procfs = "0.17"
nix = { version = "0.29", features = ["process", "signal", "user"] }
libc = "0.2"

# Kernel module handling (optional for now due to bindgen requirements)
# kmod = { version = "0.4", optional = true }

# File system operations
walkdir = "2.4"
tempfile = "3.8"
fs_extra = "1.3"

# Compression
zstd = "0.13"
tar = "0.4"

# Cryptography and verification
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.1"
hex = "0.4"

# Versioning
semver = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

[dev-dependencies]
mockall = "0.12"
proptest = "1.4"
criterion = "0.5"
tempfile = "3.8"

[features]
default = ["live-patch", "rollback", "delta-updates"]
live-patch = []
rollback = []
delta-updates = []
